--- a/.env
+++ b/.env
@@ -11,9 +11,12 @@ VITE_DEBUG_ORCHESTRATOR=true
 # Environment
 VITE_MODE=dev
 
+VITE_DEBUG_MODERATOR_LOGIN=moderator1@test.com
+VITE_DEBUG_MODERATOR_PASSWORD=test
+
 # API Configuration
-VITE_SERVER_ADDRESS_LOCAL=http://localhost:3000
-VITE_SERVER_ADDRESS_WEB=https://api.trackbee.com
+VITE_SERVER_ADDRESS_LOCAL=http://localhost:3313
+VITE_SERVER_ADDRESS_WEB=https://trackbeeback.ftweb.fr
 
 # BLE Configuration
 VITE_BLE_SCAN_TIMEOUT=8000
